# Polymer-Persistence-Length

./: MANIFEST.in  README.md  model.py  model_fk.py  model_multi.py  model_unit.py  pyproject.toml  setup.py
examples/anie202212979/: BNBP-T.txt  BNBP-Tz.txt  P1.ipynb  P1.txt  P2.ipynb  P2.txt  P3.ipynb  P4.ipynb  PBN-27.ipynb  PBN-27.txt  T-T.txt  Tz-Tz.txt
examples/confined_conformation/: T-T.txt  template-confined.ipynb
examples/generate_scan/: generate_gjf.ipynb
examples/ja201591a/: 1_deflection.csv  2_deflection.csv  3_deflection.csv  4_deflection.csv  MeT-MeT-TailTail-inv.txt  MeT-MeT-TailTail.txt  NDT1-MeT.txt  NDT2-MeT.txt  NDT3-MeT.txt  NDT4-MeT.txt  backbone.ipynb  correlation-length.ipynb  persistence-length.ipynb  variable_deflection.ipynb
examples/ma500923r/: dihedralA.txt  dihedralB.txt  p3HT.ipynb  pFTBT.ipynb  thiophene-thiophene.txt
examples/r4/: template_r4.ipynb
examples/rotational_isomeric_state/: template-mixed.ipynb
examples/temperature_scan_multipolymer_r2/: template_terpolymer_multi.ipynb
examples/temperature_scan_multipolymer_r2_lp/: template_terpolymer_multi.ipynb
examples/template_unit/: template_unit.ipynb
examples/terpolymer/: Terpolymer-transfer-matrix.ipynb
examples/variable_deflection/: MeT-MeT-HeadTail-inv.txt  MeT-MeT-HeadTail_deflection.csv  P3MT.ipynb  P3MT_generate_data.ipynb  P3MT_variable_deflection.ipynb
src/polymer_pl/: __init__.py  backbone.py  chain_rotation.c  chain_rotation.pyx  chain_rotation_fk.pyx  deflection.py  model.py  model_confined.py  model_dependent.py  model_dihedral.py  model_fk.py  tool.py  (+5 more)
(+2 files in other folders)
