[build-system]
requires = [
    "setuptools>=70",
    "wheel",
    "cython",
    "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "polymer_pl"
version = "0.9.21"
requires-python = ">=3.10"
dependencies = ["numpy", "scipy", "matplotlib", "psutil", "joblib", "pandas"]
